--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
     - docker build -f Dockerfile.dev -t marty11/docker-react .
 
 script:
-    - docker run marty11/docker-react npm run test -- --coverage
+    - docker run -e CI=true marty11/docker-react npm run test
     
